# qt-test

./: .gitignore  CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
resources/: CMakeLists.txt  asandbox.desktop
src/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
